--- a/src/main/resources/templates/views/top.html
+++ b/src/main/resources/templates/views/top.html
@@ -2,13 +2,12 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>potto</title>
 </head>
 <body>
 
-
 テストabc
-
+<b>test<b><del>abc</del>
 
 </body>
 </html>
